[gd_scene load_steps=23 format=3 uid="uid://77o3j4d7qiif"]

[ext_resource type="Script" path="res://Game/Scenes/Enemys/wolf.gd" id="1_3c8fa"]
[ext_resource type="Texture2D" uid="uid://bhvyknwmit2r5" path="res://Assets/Enemy/dog-Sheet.png" id="2_6kggw"]
[ext_resource type="Texture2D" uid="uid://d4dyke5ucx8pt" path="res://Assets/shadow.png" id="2_gnh6n"]
[ext_resource type="Texture2D" uid="uid://bk8athx521ce7" path="res://Assets/Puf/clouds-Sheet.png" id="4_010ed"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1dt2s"]
radius = 134.629

[sub_resource type="CircleShape2D" id="CircleShape2D_2kklj"]
radius = 33.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gq185"]
radius = 14.0357

[sub_resource type="CircleShape2D" id="CircleShape2D_tamxh"]
radius = 11.1803

[sub_resource type="CircleShape2D" id="CircleShape2D_lkvu3"]

[sub_resource type="Animation" id="Animation_v2hsv"]
resource_name = "HIT"
length = 0.26667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_enfqr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hit_box/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Icon:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_84vfg"]
resource_name = "attack_down"
length = 0.733337
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 3, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hit_box/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.733333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_jqiju"]
resource_name = "attack_up"
length = 0.733337
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.633333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [4, 7, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hit_box/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.733333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_6pbgy"]
resource_name = "idle_down"
length = 0.06667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_0o5q4"]
resource_name = "idle_up"
length = 0.06667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_2gu86"]
resource_name = "walking_down"
length = 0.26667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}

[sub_resource type="Animation" id="Animation_0qr7a"]
resource_name = "walking_up"
length = 0.26667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v08xw"]
_data = {
"HIT": SubResource("Animation_v2hsv"),
"RESET": SubResource("Animation_enfqr"),
"attack_down": SubResource("Animation_84vfg"),
"attack_up": SubResource("Animation_jqiju"),
"idle_down": SubResource("Animation_6pbgy"),
"idle_up": SubResource("Animation_0o5q4"),
"walking_down": SubResource("Animation_2gu86"),
"walking_up": SubResource("Animation_0qr7a")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_p1cud"]
radius = 7.0

[sub_resource type="Animation" id="Animation_jxeuq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Clouds-sheet:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Clouds-sheet:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shadow:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Icon:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Hurt_box/CollisionShape2D2:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_160m8"]
resource_name = "death"
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Clouds-sheet:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Clouds-sheet:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0666667, 0.333333, 0.5, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shadow:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Icon:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Hurt_box/CollisionShape2D2:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.500001),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o5xxy"]
_data = {
"RESET": SubResource("Animation_jxeuq"),
"death": SubResource("Animation_160m8")
}

[node name="Wolf" type="CharacterBody2D"]
script = ExtResource("1_3c8fa")

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(0, 4)
texture = ExtResource("2_gnh6n")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(0, 1)
texture = ExtResource("2_6kggw")
hframes = 8
frame = 2

[node name="See_box" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8448

[node name="CollisionShape2D" type="CollisionShape2D" parent="See_box"]
shape = SubResource("CircleShape2D_1dt2s")
debug_color = Color(0, 0.647059, 0.243137, 0)

[node name="Close_box" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8448

[node name="CollisionShape2D" type="CollisionShape2D" parent="Close_box"]
shape = SubResource("CircleShape2D_2kklj")
debug_color = Color(1, 0.0172405, 0.0709005, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gq185")

[node name="Hit_box" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hit_box"]
shape = SubResource("CircleShape2D_tamxh")
disabled = true
debug_color = Color(0.968627, 0.184314, 0, 0)

[node name="Timer" type="Timer" parent="."]

[node name="Hurt_box" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hurt_box"]
shape = SubResource("CircleShape2D_lkvu3")
debug_color = Color(0.293406, 0.498969, 1, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v08xw")
}

[node name="Sound" type="AudioStreamPlayer2D" parent="."]

[node name="Hole_box" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hole_box"]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_p1cud")

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o5xxy")
}

[node name="Clouds-sheet" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 1)
texture = ExtResource("4_010ed")
hframes = 6

[connection signal="area_entered" from="See_box" to="." method="_on_see_box_area_entered"]
[connection signal="area_entered" from="Close_box" to="." method="_on_close_box_area_entered"]
[connection signal="area_exited" from="Close_box" to="." method="_on_close_box_area_exited"]
[connection signal="area_entered" from="Hit_box" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Hurt_box" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="Hole_box" to="." method="_on_hole_box_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer2" to="." method="_on_animation_player_2_animation_finished"]
